styles/styles.css
/*
 *  This css file is used across the website. It is broken down into
 *  headings: Entire website, email boxes, forms, and other.
 *
 *  author: Jay Patel (A00433907),
 *  author: Justin Gray (A00426753)
 *  author: Vitor Jeronimo (A00431599)
*/

/* ======================================================
  Entire website
/* ======================================================

/* Sets the proper width of the website. */
body {
  background-color: #f0f2f4;
  width: 900px;
}

/* ======================================================
  Email boxes
/* ======================================================

/* Represents styling for an email in a list of emails. */
.email {
  padding: 1rem 0.75rem;
  line-height: 1.5;
  display: inline;
}

/* Changes to the email styling when you're hovering over it. */
.email:hover {
  cursor: pointer;
  background-color: #e1e6ea;
}

/* An email tile (to/from or subject) which has been read */
.email_read {
  width: 400px;
  display: inline-block;
}

/* An email tile (to/from or subject) which hasn't been read */
.email_unread {
  width: 400px;
  font-weight: bold;
  display: inline-block;
}

/* An email tile title. */
.email_title {
  width: 400px;
  font-weight: bold;
  text-decoration: underline !important;
  display: inline-block;
  padding: 1rem 0.75rem;
  line-height: 1.5;
}

/* Styling for the X delete email button (when hovering) */
.deleteButton:hover {
  background-color: red;
}

/* ======================================================
  Forms.
/* ======================================================

/* The left column of any non-email-box page. */
label {
  width: 60px;
  text-align: right;
  padding-right: 3px;
  margin: auto 1rem auto 0;
}

/* Changes the cursor to an arrow with a "?" when hovering a label */
label:hover {
  cursor: help;
}

/* Defines the size of the email body area */
#email_body {
  height: 15em;
  width: 100%;
}

/* ======================================================
  Other.
/* ======================================================

/* Styling for the sign in form */
.signin {
  position: absolute;
  top: 5px;
  left: 445px;
  width: 450px;
  text-align: right;
}

/* A navigation button's styling */
.navButton {
    width: 150px;
    text-align: center;
    font-weight: 600;
    background-color: lightgray;
    transition-duration: 0.4s;
}

/* A navigation button's styling when hovering */
.navButton:hover {
    background-color: snow;
    cursor: pointer;
}

/* Styles the view email text. */
.viewEmailText {
  text-align: left;
  margin-left: 1rem;
}

/* Style for the help message on composing page */
.help_message {
  background-color: #ffffb3;
}

